header fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -15,7 +15,8 @@
     }
 
     p {
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #525A60;
     }
 
     .buttons_container {
