--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ img {
   color: hsl(210deg, 10%, 33%);
 }
 .main p {
-  color: hsl(201deg, 11%, 66%);
+  color: #525A60;
 }
 .main .buttons_container {
   width: 100%;
